# K2SO-companion

./: .gitignore  CLAUDE.md  SKILL.md  index.html  package-lock.json  package.json
.claude/skills/k2so-k2so-agent/: SKILL.md
.claude/skills/k2so-manager/: SKILL.md
.github/: copilot-instructions.md
.k2so/: PROJECT.md  config.json
.k2so/agents/k2so-agent/: SKILL.md  agent.md
.k2so/agents/manager/: SKILL.md  agent.md
.k2so/skills/k2so/: SKILL.md
.k2so/skills/k2so-k2so-agent/: SKILL.md
.k2so/skills/k2so-manager/: SKILL.md
.k2so/work/inbox/: feature-migrate-to-websocket-protocol.md  notice-shadow-terminal-ready-for-testing.md  notice-terminal-scrollback-push-event.md  notice-v029-shadow-terminal-coming.md  notice-v0292-background-spawn.md  notice-v0296-display-offset-fix.md  (+5 more)
docs/: ios-keyboard-layout.md
mockup/: package-lock.json  package.json
mockup/app/: globals.css  layout.tsx  page.tsx
scripts/: release.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  connection.rs
src/api/: client.ts  websocket.ts
src/components/: ChatBubble.tsx  HeaderBar.tsx  NewSessionModal.tsx  SearchOverlay.tsx  SessionSwitcher.tsx  TabBar.tsx  TerminalView.tsx  WorkspaceRail.tsx
src/lib/: tauri.ts
src/pages/: ChatSession.backup.tsx  ChatSession.tsx  Login.tsx  Sessions.tsx  Settings.tsx  Workspaces.tsx
src/stores/: agents.ts  auth.ts  workspaces.ts
src/styles/: index.css  theme.ts
