[package]
name = "k2so-companion"
version = "1.0.0"
description = "Mobile companion for K2SO agent orchestrator"
authors = ["Alakazam Labs"]
edition = "2021"

[lib]
name = "k2so_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tauri-plugin-ios-keyboard = "0.1.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
